--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
 
 
         <build>
+
             <plugins>
 
                 <plugin>
@@ -139,13 +140,13 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
                     <configuration>
-                        <includes>
-                            <include>testhomepage.package</include>
-                        </includes>
+                        <forkCount>0</forkCount>
+<!--                        <includes>-->
+<!--                            <include>src/test/resources/Runnerfile.xml</include>-->
+<!--                        </includes>-->
                         <suiteXmlFiles>
-<!--                            <suiteXmlFiles>src/test/resources/Runnerfile.xml</suiteXmlFiles>-->
+                            <suiteXmlFiles>src/test/resources/Runnerfile.xml</suiteXmlFiles>
                             <!--                        <suiteXmlFiles>target/test-classes/CNNTestRunner.xml</suiteXmlFiles>-->
                             <!--                        <suiteXmlFiles>target/test-classes/BBCTestRunner.xml</suiteXmlFiles>-->
                         </suiteXmlFiles>
