--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Generic</module>
         <module>LesKodeIt</module>
+        <module>Google</module>
     </modules>
 
         <properties>
@@ -140,6 +141,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+
                     <configuration>
                         <forkCount>0</forkCount>
 <!--                        <includes>-->
