--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
                     <!--<scope>test</scope>-->
                 </dependency>
                 <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
+                <dependency>
+                    <groupId>io.cucumber</groupId>
+                    <artifactId>cucumber-testng</artifactId>
+                    <version>5.1.3</version>
+                </dependency>
+
 
 
             </dependencies>
@@ -148,6 +154,7 @@
 <!--                            <include>src/test/resources/Runnerfile.xml</include>-->
 <!--                        </includes>-->
                         <suiteXmlFiles>
+                            <suiteXmlFiles>src/test/resources/Runnerfile.xml</suiteXmlFiles>
                             <suiteXmlFiles>src/test/resources/Runnerfile.xml</suiteXmlFiles>
                             <!--                        <suiteXmlFiles>target/test-classes/CNNTestRunner.xml</suiteXmlFiles>-->
                             <!--                        <suiteXmlFiles>target/test-classes/BBCTestRunner.xml</suiteXmlFiles>-->
