--- a/Twitter/pom.xml
+++ b/Twitter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Google</artifactId>
+    <artifactId>Twitter</artifactId>
 
     <dependencies>
         <dependency>
