--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>LesKodeIt</module>
         <module>Google</module>
         <module>JQuery</module>
+        <module>Twitter</module>
     </modules>
 
         <properties>
@@ -23,8 +24,6 @@
         <!--  pom means Project Object Model : Heart of this project -->
 
         <dependencyManagement>
-
-
             <dependencies>
 
                 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -44,7 +43,7 @@
                 <dependency>
                     <groupId>org.testng</groupId>
                     <artifactId>testng</artifactId>
-                    <version>7.1.0</version>
+                    <version>6.14.3</version>
                 </dependency>
 
                 <dependency>
@@ -125,9 +124,59 @@
                     <version>5.1.3</version>
                 </dependency>
 
-
+                <!-- for using RestAssured -->
+                <dependency>
+                    <groupId>io.rest-assured</groupId>
+                    <artifactId>rest-assured</artifactId>
+                    <version>3.3.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.github.scribejava</groupId>
+                    <artifactId>scribejava-apis</artifactId>
+                    <version>2.5.3</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                    <version>2.9.10.1</version>
+                </dependency>
+                <!-- for using Unirest -->
+                <dependency>
+                    <groupId>com.mashape.unirest</groupId>
+                    <artifactId>unirest-java</artifactId>
+                    <version>1.4.9</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                    <version>4.3.6</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpasyncclient</artifactId>
+                    <version>4.0.2</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpmime</artifactId>
+                    <version>4.3.6</version>
+                </dependency>
+                <!-- for using Json -->
+                <dependency>
+                    <groupId>org.json</groupId>
+                    <artifactId>json</artifactId>
+                    <version>20140107</version>
+                </dependency>
+                <!-- for using simple Json -->
+                <dependency>
+                    <groupId>com.googlecode.json-simple</groupId>
+                    <artifactId>json-simple</artifactId>
+                    <version>1.1.1</version>
+                </dependency>
 
             </dependencies>
+
+
 
         </dependencyManagement>
 
